--- a/Lab_Programacioon 6º2/edit.css
+++ b/Lab_Programacioon 6º2/edit.css
@@ -32,3 +32,11 @@ button{
     height: 35px;
     font-size: medium;
 }
+
+h1{
+    color: rgb(255, 0, 0);
+    display: inline;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: medium;
+
+}
